refactor(redis): 替换 Redis 客户端 JedisPooled 为 RedisClient
- 将 RedisVectorStore 使用的 JedisPooled 类型统一替换成 RedisClient
- 修改 RedisVectorServiceImpl 及相关测试中 JedisPooled 为 RedisClient
- 确保客户端获取和调用方法对应改为 RedisClient 接口
- 修正 RedisVectorAutoConfiguration 中变量命名错误，避免混淆
- 增强代码一致性与新版 Redis 客户端兼容性